--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "weather-app",
-  "version": "1.0.0",
-  "description": "A one-page weather app that displays a 5-day forecast for a given city and country code.",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nicholasewing/weather-app.git"
-  },
-  "author": "Nicholas Ewing",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nicholasewing/weather-app/issues"
-  },
-  "homepage": "https://github.com/nicholasewing/weather-app#readme",
   "dependencies": {
-    "node-static": "^0.7.11"
-  },
-  "devDependencies": {}
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0"
+  }
 }
