--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "weather-app",
   "version": "0.0.0",
   "private": true,
-  "start": "node app.js",
+  "scripts" : {
+    "start": "node app.js"
+  }
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
